chore(swagger-verification): Swagger UI for admin operate endpoints
